# RustOS

./: .bochsrc  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  i686-RustOS.json  linker.ld  linker_debug.ld  run  test_runner.sh  x86_64-RustOS.json
.cargo/: config
.github/workflows/: build.yml
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: ata.rs  gdt.rs  interrupt.rs  mod.rs  pci.rs  pic.rs  port.rs  serial.rs
kernel/src/arch/x86_64/paging/: memory_map.rs  mod.rs  tables.rs
kernel/src/bootloader/: stage1.s  stage2.s
kernel/src/driver/: ata.rs  e1000.rs  intel_8254x.rs  mod.rs  ps2_keyboard.rs  vga_driver.rs
kernel/src/file_system/: mod.rs  ustar.rs
kernel/src/fs/: mod.rs
kernel/src/memory/: frame_allocator.rs  mod.rs
kernel/src/memory_manager/: allocator.rs  frame.rs  frame_allocator.rs  mod.rs
kernel/src/memory_manager/allocator/: mod.rs  slab.rs
kernel/src/tty/: core_env.rs  env.rs  eval.rs  mod.rs  reader.rs  types.rs
kernel/src/utils/: lazy_static.rs  libc.rs  mod.rs  spinlock.rs
kernel/src/x86_64/: gdt.rs  pic.rs  serial.rs
kernel/tests/: ata_read_write.rs  page_fault.rs  read_write_syscall.rs  simple_boot.rs
kernel_runner/: Cargo.toml
kernel_runner/src/: main.rs
src/: bootLoader.asm  kernel.c  kernel_start.asm  lib.rs  main.rs  vga_driver.rs
src/boot/: boot_loader.asm  bootloader.asm  kernel_start.asm
src/driver/: PS2_keyboard.rs  ata.rs  cpuio.rs  gdt.rs  interrupt.rs  mod.rs  port.rs  ps2_keyboard.rs  vga_driver.rs
src/fs/: mod.rs
src/memory/: frame.rs  frame_allocator.rs  mod.rs
tests/: ata_read_write.rs  page_fault.rs  simple_boot.rs
(+13 files in other folders)
