[package]
name = "rust_os"
version = "0.1.0"
authors = ["Sander JSA <sanderjsa@hotmail.com>"]

[dependencies]
x86_64 = "0.10.2"

[[bin]]
name = "rust_os"
test = false

[[test]]
name = "simple_boot"
harness = false

[[test]]
name = "page_fault"
harness = false

[[test]]
name = "ata_read_write"
harness = false
