[package]
name = "kernel"
version = "0.1.0"
authors = ["Sander JSA <sanderjsa@hotmail.com>"]
edition = "2018"

[[bin]]
name = "kernel"
test = false

[[test]]
name = "simple_boot"
harness = false

[[test]]
name = "page_fault"
harness = false

[[test]]
name = "ata_read_write"
harness = false

[[test]]
name = "read_write_syscall"
harness = false
